--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,7 +1,20 @@
 .main {
     width: 80%;
     margin: auto;
+    margin-top: 30px;
     /* border: 1px solid white; */
     display: flex;
     gap: 20px;
+}
+
+.left,
+.right {
+    /* border: solid 1px yellow; */
+    width: 100%;
+}
+
+.heading {
+    color: white;
+    text-align: center;
+   
 }
