--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,7 @@
     color: black;
     padding: 3px;
     text-align: center;
-    box-shadow: rgba(31, 31, 31, 0.2) 0px 2px 8px 0px;
+    box-shadow: #1f1f1f33 0px 2px 8px 0px;
     color: white;
 
 }
