--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0%;
-  background-color: #5570f0;
+  /* background-color: #5570f0; */
+  background-color: #1d4e89;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
 }
