--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -15,21 +15,19 @@
 }
 
 .heading {
-    /* color: white; */
     background-color: #97D2EC;
     font-weight: bolder;
     text-align: center;
     margin-bottom: 25px;
     padding: 15px;
-    border-radius: 15px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 .left>div {
     padding: 15px;
     margin-bottom: 25px;
-    border-radius: 15px;
-    /* background-color: #FFF7E9; */
+    border-radius: 10px;
     background-color: #97D2EC;
 }
 
