--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -4,13 +4,13 @@
     margin-top: 30px;
     /* border: 1px solid white; */
     display: flex;
-    gap: 30px;
+    gap: 40px;
 }
 
 .left,
 .right {
     /* border: solid 1px yellow; */
-    box-shadow: #1f1f1f33 0px 8px 24px;
+    /* box-shadow: #1f1f1f33 0px 8px 24px; */
     width: 100%;
 }
 
