--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -45,7 +45,7 @@
 #show {
     margin: 20px;
     padding: 20px;
-    height: 150px;
+    min-height: 150px;
     border-radius: 15px;
     font-size: 20px;
     background-color: #97D2EC;
